# Chatter

./: .gitignore  cookies.txt
backend/: app.db  go.mod  go.sum  main.go
backend/db/: init.go
backend/handlers/: fetch.go  register.go
backend/models/: db.go
frontend/src/: App.jsx
frontend/src/MainPage/: LoggedIn.jsx  Navbar.css  Navbar.jsx  NotLoggedIn.jsx  mainpage.css  mainpage.jsx
frontend/src/login/: Form.jsx
frontend/src/register/: Form.jsx  RegisterForm.css
rust_backend/: Cargo.toml
rust_backend/db/: chadder.db
rust_backend/src/: main.rs
rust_backend/src/db/: db_init.rs
rust_backend/src/handlers/: delete_user.rs  login_handler.rs  logout_handler.rs  mod.rs  post_delete.rs  post_new.rs  post_update.rs  register_handler.rs
test/: cookies.txt  delete_user  login  logout  post_delete  post_new  post_update  register  rmdb
