[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tower = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
